--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,32 @@
 # Core dependencies
-streamlit>=1.27.0
+streamlit>=1.28.0
 torch>=2.0.0
-torchaudio>=2.0.0
 transformers>=4.30.0
 soundfile>=0.12.1
-librosa>=0.10.0
 numpy>=1.24.0
 pandas>=2.0.0
-datasets>=2.14.0
+librosa>=0.10.0
+
+# Required for SpeechT5Tokenizer
+sentencepiece>=0.1.99
+protobuf>=3.20.0
 
 # Audio processing
-scipy>=1.10.0
-audioread>=3.0.0
+torchaudio>=2.0.0
 
-# File handling and utilities
-pathlib>=1.0.1
-typing-extensions>=4.5.0
-python-dotenv>=1.0.0
+# Optional but recommended for better performance
+accelerate>=0.20.0
+optimum>=1.13.0
 
-# Progress bars and logging
+# For progress bars and timing
 tqdm>=4.65.0
+
+# File handling
+pathlib>=1.0.1
+
+# Required for some audio processing features
+scipy>=1.10.0
+
+# Optional: For CUDA support (if using GPU)
+# Note: Will use CPU if CUDA is not available
+--extra-index-url https://download.pytorch.org/whl/cu118  # For CUDA 11.8 support
